--- a/app/views/deliveries/_form02.html.erb
+++ b/app/views/deliveries/_form02.html.erb
@@ -57,7 +57,7 @@
       <%= f.select :division_id,options_from_collection_for_select(@divisions,'id','name') %>
     </div>
     
-    <form method="get"  return false;">
+    <form method="get"  return false;>
     <div class="field">
     
       <label for="ac_customer" class="bold"> DESTINATARIO *</label><br />
