--- a/app/views/facturas/new.html.erb
+++ b/app/views/facturas/new.html.erb
@@ -19,5 +19,5 @@
 <%= hr() %>
 
 <div class="button">
-  <%= link_to 'Back', "/companies/facturas/#{@company.id}" %>
+  <%= link_to 'Regresar', "/companies/facturas/#{@company.id}" %>
 </div>
