--- a/app/views/facturas/edit.html.erb
+++ b/app/views/facturas/edit.html.erb
@@ -19,6 +19,6 @@
 <%= hr() %>
 
 <div class="button">
-  <%= link_to 'Show', @invoice %>
-  <%= link_to 'Back', "/companies/facturas/#{@company.id}" %>
+  <%= link_to 'Ver', @invoice %>
+  <%= link_to 'Regresar', "/companies/facturas/#{@company.id}" %>
 </div>
