--- a/app/views/supplier_payments/_list.html.erb
+++ b/app/views/supplier_payments/_list.html.erb
@@ -43,7 +43,13 @@
           </td>
           <td class="bordered_right bordered_bottom">
             <%= link_to "Ver", supplierpayment %>
+             
           </td>
+          
+          
+            <td><%= link_to 'Edit', edit_supplier_payment_path(supplierpayment) %></td>
+            
+            
           <td class="bordered_right bordered_bottom">  
             
           <%= link_to 'Eliminar', supplierpayment, :confirm => 'Are you sure?', :method => :delete  %>           
