--- a/app/views/contratos/_form.html.erb
+++ b/app/views/contratos/_form.html.erb
@@ -61,7 +61,7 @@
 
     <div class="field">
     <%= f.label :importe,"Importe " %><br />
-    <%= f.text_field :importe ,value: 0.00 %>
+    <%= f.text_field :importe %>
     </div>
 
 
