--- a/app/views/contratos/show.html.erb
+++ b/app/views/contratos/show.html.erb
@@ -170,20 +170,21 @@
             Totales 
           </td>
           <td class="bordered_right bordered_bottom">
-            <%= t_importe %>
+            <%= sprintf("%2.2f",t_importe) %>
           </td>
                     
+                    
           <td class="bordered_right bordered_bottom">
-            <%= t_vventa  %>
+            <%= sprintf("%2.2f",t_vventa)  %>
           </td>
            <td class="bordered_right bordered_bottom">
-            <%= t_comision1  %>
+            <%= sprintf("%2.2f",t_comision1)  %>
           </td>
            <td class="bordered_right bordered_bottom">
-            <%= t_comision2  %>
+            <%= sprintf("%2.2f",t_comision2)  %>
           </td>
           <td class="bordered_right bordered_bottom">
-            <%= t_total  %>
+            <%= sprintf("%2.2f",t_total)  %>
           </td>
         <td class="bordered_right bordered_bottom">
             
