--- a/app/views/purchases/_form.html.erb
+++ b/app/views/purchases/_form.html.erb
@@ -38,12 +38,12 @@
     </div>
     <div class="field">
       <%= f.label :date1, "Fecha Emision*", :class => "bold" %><br />
-      <%= f.date_field :date1 , value: Date.today.strftime("%d/%m/%Y") %>
+      <%= f.date_field :date1  %>
     </div>
 
     <div class="field">
       <%= f.label :date2, "Fecha Entrega*", :class => "bold" %><br />
-      <%= f.date_field :date2, value: Date.today.strftime("%d/%m/%Y") %>
+      <%= f.date_field :date2 %>
     </div>
 
 
@@ -53,7 +53,7 @@
     </div>
     <div class="field">
       <%= f.label :date3, "Fecha Vmto*", :class => "bold" %><br />
-      <%= f.date_field :date3, value: Time.now.strftime("%d/%m/%Y")  %>
+      <%= f.date_field :date3  %>
     </div>quit    
 
 
