--- a/app/views/supplier_payments/_form.html.erb
+++ b/app/views/supplier_payments/_form.html.erb
@@ -20,7 +20,7 @@
       
         <div class="field">
           <%= f.label :fecha1, "Fecha*", :class => "bold" %><br />
-          <%= f.date_field :fecha1, value: Time.now.strftime("%d/%m/%Y") ,:class => "input.tf_short" %>
+          <%= f.date_field :fecha1 ,:class => "input.tf_short" %>
         </div>
 
         </td>
@@ -30,15 +30,7 @@
           <%= f.text_field :code, :onclick => "$(this).select();" %>
         </div>
     
-    <div class="field">
-      <%= f.label :location_id ,"Local"%><br />
-      <%= f.select :location_id, options_from_collection_for_select(@locations,'id','name') %>
-    </div>
-
-    <div class="field">
-      <%= f.label :division_id %><br />
-      <%= f.select :division_id,options_from_collection_for_select(@divisions,'id','name') %>
-    </div>
+  
 
     <div class="field">
       <%= f.label :bank_acount_id %><br />
