--- a/app/views/reports/reports_contratos.html.erb
+++ b/app/views/reports/reports_contratos.html.erb
@@ -17,16 +17,22 @@
     <%= link_to "Listado de Contratos  ", "/companies/reports/rpt_contratos1_pdf/#{@company.id}" %>
   </p>
   
-  <p class="big">
-  </p>
-
-  <p class="big">
-  </p>
-
-
-<h3>
-   Ordenes 
+  <h3>
+   Estados de cuenta
   </h3>
+  
+  
+  <p class="big">
+    <%= link_to "Estado de cuenta ", "/companies/reports/rpt_contratos2_pdf/#{@company.id}" %>
+  </p>
+
+  <p class="big">
+  </p>
+
+
+ <h3>
+   Ordenes 
+ </h3>
 
   <p class="big">
     <%= link_to "Listado de Ordenes  ", "/companies/reports/rpt_ordenes1_pdf/#{@company.id}" %>
