--- a/app/views/reports/reports_contratos.html.erb
+++ b/app/views/reports/reports_contratos.html.erb
@@ -17,14 +17,12 @@
     <%= link_to "Listado de Contratos  ", "/companies/reports/rpt_contratos1_pdf/#{@company.id}" %>
   </p>
   
-  <h3>
-   Estados de cuenta
-  </h3>
   
   
   <p class="big">
-    <%= link_to "Estado de cuenta ", "/companies/reports/rpt_contratos2_pdf/#{@company.id}" %>
+    <%= link_to "Listado de contratos detallle  ", "/companies/reports/rpt_contratos2_pdf/#{@company.id}" %>
   </p>
+
 
   <p class="big">
   </p>
@@ -44,6 +42,21 @@
   <p class="big">
   </p>
   
+  
+  
+  <h3>
+   Estados de cuenta
+  </h3>
+  
+  
+  <p class="big">
+    <%= link_to "Estado de cuenta ", "/companies/reports/rpt_contratos3_pdf/#{@company.id}" %>
+  
+  
+  
+  
+  </p>
+
 
 <div class="mid_box">
 
