--- a/app/views/ordens/show.html.erb
+++ b/app/views/ordens/show.html.erb
@@ -28,9 +28,11 @@
 </p>
 
 <b>Marca:</b>
-  <%= @orden.marca.descrip %>
+  <%= @orden.marca.name %>
 </p>
-
+<b>Marca:</b>
+  <%= @orden.producto.name %>
+</p>
 
 
 <b>Version:</b>
