--- a/app/views/ordens/_form.html.erb
+++ b/app/views/ordens/_form.html.erb
@@ -35,7 +35,7 @@
       
       
       <div class="small">
-        Ingrese una termino de busqueda para encontrar un cliente.
+          Ingrese una termino de busqueda para encontrar un cliente.
       </div>
 
       <br />
@@ -60,22 +60,29 @@
       <%= f.label :fecha, "Fecha Emision*", :class => "bold" %><br />
       <%= f.date_field :fecha %>
     </div>
-
     
     <div class="field">
       <%= f.label :marca_id %><br />
-      <%= f.select :marca_id,options_from_collection_for_select(@marcas,'id','descrip') %>
+      <%= f.collection_select :marca_id, Marca.order(:id), :id, :name,{:prompt   => "Selec una marca"} %>
     </div>
-    
+   
+   
+   
+    <div class="field">
+      <%= f.label :producto_id %><br />
+      <%= f.collection_select :producto_id, @productos, :id, :name,{:prompt   => "Selec un producto"} %>
+    </div>
+     
     <div class="field">
       <%= f.label :version_id %><br />
-      <%= f.select :version_id,options_from_collection_for_select(@versions,'id','descrip') %>
+      <%= f.collection_select :version_id, @versions, :id, :descrip,{:prompt   => "Selec una version"} %>
     </div>
     
+   
     
     <div class="field">
       <%= f.label :tiempo, "Duracion*", :class => "bold"   %><br />
-      <%= f.text_field :tiempo  %>
+      <%= f.number_field :tiempo   %>
     </div>
     <div class="field">
       <%= select_tag(:year, options_for_select(@years, @year)) %>
@@ -143,9 +150,7 @@
   <% end %>
 </div>
 
-  
 
-  
 <%= br() %>
 
 <br />
@@ -300,7 +305,6 @@
       
       listItemsOrden();
     <% end %>
-
   });
-
+    
 </script>
