--- a/app/views/contratos/contratos_details/show.html.erb
+++ b/app/views/contratos/contratos_details/show.html.erb
@@ -55,5 +55,4 @@
   <%= @contrato_detail.factura2 %>
 </p>
 
-<%= link_to 'Edit', edit_contrato_detail_path(@contrato_detail) %> |
-<%= link_to 'Back', contrato_details_path %>
+<%= link_to 'Regresar', contrato_path %>
