--- a/app/views/contratos/edit.html.erb
+++ b/app/views/contratos/edit.html.erb
@@ -3,5 +3,5 @@
  
 <%= render 'form' %>
 
-<%= link_to 'Show', @contrato %> |
-<%= link_to 'Back', contratos_path %>
+<%= link_to 'Ver', @contrato %> |
+<%= link_to 'Regresar', contratos_path %>
