--- a/app/views/companies/configuracion.html.erb
+++ b/app/views/companies/configuracion.html.erb
@@ -101,4 +101,20 @@
   </p>  
   
 <%= hr() %>
+
+
+
+  <h3>
+        <div>
+          <%= image_tag("clients_32.png", :class => "vmiddle") %>
+          <%= link_to "Empleados", employees_path %> 
+        </div>
+  </h3>
+  <p>
+     Agregar, editar or agregar una ciudad 
+  </p>  
+  
+<%= hr() %>
+
+
 </div>
