--- a/app/views/reports/rpt_cpagar4_pdf.html.erb
+++ b/app/views/reports/rpt_cpagar4_pdf.html.erb
@@ -31,13 +31,13 @@ totals = []
 
  
 
-  <input type="submit" value="Ver" class="small_btn" />
-  <a href="/supplier_payments/rpt_cpagar4_pdf/<%= @company.id %>"></a>
+  <input type="submit" value="To PDF" />
+  
 </form>
 
 <br />
 
 
 <div class="button">
-  <%= link_to 'Back', "/companies/cpagar/#{@company.id}" %>
+  <%= link_to 'Regresar', "/companies/cpagar/#{@company.id}" %>
 </div>
