--- a/app/views/facturas/ac_contratos.html.erb
+++ b/app/views/facturas/ac_contratos.html.erb
@@ -1,5 +1,5 @@
 <% if @contratos %>
   <% for contrato in @contratos %>  
-  <%= contrato.name %>|BRK|<%= contrato.descrip   %>|BRK|<%= contrato.code %>|BRK|<%= contrato.id %>
+  <%= contrato.code %>|BRK|<%= contrato.descrip   %>|BRK|<%= contrato.code %>|BRK|<%= contrato.id %>
   <% end %>
 <% end %>
