--- a/app/views/reports/rpt_cpagar1_all.html.erb
+++ b/app/views/reports/rpt_cpagar1_all.html.erb
@@ -30,13 +30,7 @@ totals = []
 		<input type="date" name="fecha2" value="2017-01-15" style = "width: 150px" >
   </div>
 
-  <div class="field">
-      
-  <%= select_tag(:moneda_id, options_from_collection_for_select(@monedas,'id','description')) %>
-  </div>
-
-
-  <input type="submit" value="Ver" class="small_btn" />
+  <input type="submit" value="To PDF"  />
   
 </form>
 
