--- a/app/views/reports/rpt_cpagar2_pdf.html.erb
+++ b/app/views/reports/rpt_cpagar2_pdf.html.erb
@@ -20,21 +20,21 @@ totals = []
 
 <form method="get" action="/purchases/rpt_cpagar2_pdf/<%= @company.id %>">
  	<div class="field">
-      <input type="date" name="fecha1" value="2017-01-02" style = "width: 150px" >
+      <input type="date" name="fecha1" value="2017-01-01" style = "width: 150px" >
 
     </div>
 	<div class="field">
-		<input type="date" name="fecha2" value="2017-01-25" style = "width: 150px" >
+		<input type="date" name="fecha2" value="2018-01-16" style = "width: 150px" >
     </div>
 
     
-  <input type="submit" value="Ver" class="small_btn" />
-  <a href="/purchases/rpt_cpagar2_pdf/<%= @company.id %>" class="small_btn">Hoy</a>
+  <input type="submit" value="To PDF"  />
+
 </form>
 
 <br />
 
 
 <div class="button">
-  <%= link_to 'Back', "/companies/cpagar/#{@company.id}" %>
+  <%= link_to 'Regresar', "/companies/cpagar/#{@company.id}" %>
 </div>
