--- a/app/views/companies/contratos.html.erb
+++ b/app/views/companies/contratos.html.erb
@@ -6,7 +6,7 @@
   </h3>
 
   <p>
-    Agregar, editar or eliminar las marcas  que tu negocio ofrece.
+    Agregar, editar or eliminar los contratos  que tu negocio ofrece.
   </p>
 
   <%= hr() %>
@@ -17,7 +17,7 @@
   </h3>
 
   <p>
-   Agregar, editar or eliminar  modelos.
+   Agregar, editar or eliminar  las ordenes.
   </p>
 
   <%= hr() %>
