--- a/app/views/avisodetails/edit.html.erb
+++ b/app/views/avisodetails/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @avisodetail %> |
-<%= link_to 'Back', avisodetails_path %>
+<%= link_to 'Ver', @avisodetail %> |
+<%= link_to 'Regresar', avisodetails_path %>
