--- a/app/views/ordens/edit.html.erb
+++ b/app/views/ordens/edit.html.erb
@@ -19,6 +19,6 @@
 <%= hr() %>
 
 <div class="button">
-  <%= link_to 'Show', @orden %>
-  <%= link_to 'Back', "/companies/ordens/#{@company.id}" %>
+  <%= link_to 'Ver', @orden %>
+  <%= link_to 'Regresar', "/companies/ordens/#{@company.id}" %>
 </div>
