--- a/app/views/ordens/new.html.erb
+++ b/app/views/ordens/new.html.erb
@@ -19,5 +19,5 @@
 <%= hr() %>
 
 <div class="button">
-  <%= link_to 'Back', "/companies/ordens/#{@company.id}" %>
+  <%= link_to 'Regresar', "/companies/ordens/#{@company.id}" %>
 </div>
