--- a/app/views/reports/reports_contratos.html.erb
+++ b/app/views/reports/reports_contratos.html.erb
@@ -33,13 +33,15 @@
  </h3>
 
   <p class="big">
-    <%= link_to "Listado de Ordenes  ", "/companies/reports/rpt_ordenes1_pdf/#{@company.id}" %>
+    <%= link_to "Listado de Ordenes por cliente ", "/companies/reports/rpt_ordenes1_pdf/#{@company.id}" %>
   </p>
   
   <p class="big">
+    
   </p>
 
   <p class="big">
+    
   </p>
   
   
