--- a/app/views/companies/configuracion.html.erb
+++ b/app/views/companies/configuracion.html.erb
@@ -117,4 +117,30 @@
 <%= hr() %>
 
 
+  <h3>
+        <div>
+          <%= image_tag("clients_32.png", :class => "vmiddle") %>
+          <%= link_to "Categorias",category_programs_path %> 
+        </div>
+  </h3>
+  <p>
+     Agregar, editar or agregar una ciudad 
+  </p>  
+  
+<%= hr() %>
+
+
+  <h3>
+        <div>
+          <%= image_tag("clients_32.png", :class => "vmiddle") %>
+          <%= link_to "Tipo de ordenes ",tipo_ordens_path %> 
+        </div>
+  </h3>
+  <p>
+     Agregar, editar or agregar un tipo
+  </p>  
+  
+<%= hr() %>
+
+
 </div>
