--- a/app/views/reports/rpt_ordenes1_pdf.html.erb
+++ b/app/views/reports/rpt_ordenes1_pdf.html.erb
@@ -18,22 +18,153 @@ totals = []
   Reporte de Ordenes
 </h1>
 
+
 <form method="get" action="/ordens/rpt_ordenes1/<%= @company.id %>">
-  
 
   <div class="field">
     Desde <input type="date" name="fecha1" value="2017-03-01" style = "width: 150px" >
   </div>
 
 	<div class="field">
-    Hasta <input type="date" name="fecha2" value="2017-03-01" style = "width: 150px" >
+    Hasta <input type="date" name="fecha2" value="2018-01-24" style = "width: 150px" >
   </div>
 
+  <table>
+    <tr>
+      <td>
+        <div class="field">
+          <input id="check_cliente" name="check_cliente" type="checkbox" value="true" checked />
+          <div class="small">
+            Todos los clientes
+          </div>
+        </div>
+        
+      </td>
+      <td>
+      <div class="field">
+        <h5>  Cliente </h5>
+        <%= select_tag(:customer_id,options_from_collection_for_select(@customers,'id','name') ) %>
+      </div>
+      </td>
+      
+    </tr>
+    <tr>
+      <td>
+    <div class="field">
+      <input id="check_marca" name="check_marca" type="checkbox" value="true" checked />
+      <div class="small">
+         Todos los marcas
+      </div>
+    </div>
+     
+        
+      </td>
+      <td>
+    <div class="field">
+      <h5>  Marca </h5>
+      <%= select_tag(:marca_id,options_from_collection_for_select(@marcas,'id','name') ) %>
+    </div>
+        
+        
+      </td>
+      
+    </tr>
+    <tr>
+      <td>
+     <div class="field">
+      <input id="check_producto" name="check_producto" type="checkbox" value="true" checked />
+      <div class="small">
+        Todos los productos
+      </div>
+    </div>
+       
+        
+      </td>
+      <td>
+    <div class="field">
+      <h5>  Producto </h5>
+      <%= select_tag(:producto_id,options_from_collection_for_select(@productos,'id','name') ) %>
+    </div>
+        
+        
+      </td>
+      
+    </tr>
+    
+    <tr>
+      
+      <td>
+        <div class="field">
+      <input id="check_version" name="check_version" type="checkbox" value="true" checked />
+      <div class="small">
+        Todos los Version 
+      </div>
+    </div>
 
-  <input type="submit" value="Generar Reporte "  />
-  
+ 
+      </td>
+      <td>
+    <div class="field">
+      <h5>Version  </h4>
+      <%= select_tag(:version_id,options_from_collection_for_select(@versions,'id','descrip') ) %>
+    </div>
+        
+      </td>
+    </tr>
+    <tr>
+      <td>
+   <div class="field">
+      <input id="check_ciudad" name="check_ciudad" type="checkbox" value="true"  checked />
+      <div class="small">
+        Todos las ciudades
+      </div>
+    </div>
+       
+      </td>
+      <td>
+         
+    <div class="field">
+      <h5>Ciudad </h4>
+      <%= select_tag(:ciudad_id,options_from_collection_for_select(@ciudads,'id','descrip') ) %>
+    </div>
+    
+
+      </td>
+    </tr>
+    
+    <tr>
+     <td>
+       <div class="field">
+        <input id="check_tipoorden" name="check_tipoorden" type="checkbox" value="true" checked />
+        <div class="small">
+         Todos las ordenes 
+         </div>
+       </div>
+       
+      </td>
+      <td>
+         
+      <div class="field">
+        <h5>Tipo orden  </h4>
+        <%= select_tag(:tipo,options_from_collection_for_select(@tipoordens,'id','descrip') ) %>
+      </div>
+      
+
+      </td>
+    </tr>
+    
+   
+    
+  </table>
+    
+ 
+     <input type="submit" value="Generar Reporte "  />
   
 </form>
 
 <br />
 
+
+<div class="button">
+  <%= link_to 'Regresar', "/companies/reports/reports_contratos/#{@company.id}" %>
+</div>
