--- a/app/views/ordens/_form.html.erb
+++ b/app/views/ordens/_form.html.erb
@@ -58,7 +58,7 @@
     </div>
     <div class="field">
       <%= f.label :fecha, "Fecha Emision*", :class => "bold" %><br />
-      <%= f.date_field :fecha %>
+      <%= f.date_field :fecha ,readonly: true  %>
     </div>
     
     <div class="field">
