--- a/app/views/companies/faqs.html.erb
+++ b/app/views/companies/faqs.html.erb
@@ -2,33 +2,11 @@
 
   <h3>
     <%= image_tag("invoice_32.png", :class => "vmiddle") %>
-    <%= link_to "Facturas", "/companies/facturas/#{@company.id}" %>
+    <%= link_to "Facturas y notas ", "/companies/facturas/#{@company.id}" %>
   </h3>
 
   <p>
      Agregar, editar or eliminar facturas para tu negocio.
-  </p>
-  
-  <%= hr() %>
-
-  <h3>
-    <%= image_tag("invoice_32.png", :class => "vmiddle") %>
-    <%= link_to "Nota de Credito ", "/companies/facturas/#{@company.id}" %>
-  </h3>
-
-  <p>
-     Agregar, editar or eliminar notas de credito para tu negocio.
-  </p>
-  
-  <%= hr() %>
-
-  <h3>
-    <%= image_tag("invoice_32.png", :class => "vmiddle") %>
-    <%= link_to "Nota de Debito", "/companies/facturas/#{@company.id}" %>
-  </h3>
-
-  <p>
-     Agregar, editar or eliminar notas de debito para tu negocio.
   </p>
   
   
