--- a/app/views/facturas/_list.html.erb
+++ b/app/views/facturas/_list.html.erb
@@ -40,7 +40,9 @@
           </td>
           
           <td class="bordered_right bordered_bottom">
+            <%if invoice.contrato != nil %>
             <%= money(invoice.contrato.code) %>
+            <% end %>
           </td>
           <td class="bordered_right bordered_bottom right">
             <%= money(invoice.total) %>
