--- a/app/views/contratos/index.html.erb
+++ b/app/views/contratos/index.html.erb
@@ -32,7 +32,7 @@
         <td><%= contrato.nrocuotas %></td>
         <td><%= contrato.comision1 %></td>
         <td><%= contrato.comision2 %></td>
-        <td><%= link_to 'Ver', contrato %></td>
+        <td><%= link_to 'Cuotas', contrato %></td>
         <td><%= link_to 'Edit', edit_contrato_path(contrato) %></td>
         <td><%= link_to 'Eliminar', contrato, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
