--- a/app/views/contratos/contratos_details/new.html.erb
+++ b/app/views/contratos/contratos_details/new.html.erb
@@ -15,6 +15,10 @@
 <p>Comision 2 
  <input type="text" name="ac_item_comision2" id="ac_item_comision2" value= "<%= @contrato.comision2 %>" readonly class="tf_short" />
 </p>
+<p>Comision 3
+ <input type="text" name="ac_item_comision3" id="ac_item_comision3" value= "<%= @contrato.comision2 %>" readonly class="tf_short" />
+</p>
+
 <p>Nro Cuotas 
  <input type="text" name="ac_item_cuotas" id="ac_item_cuotas" value= "<%= @contrato.nrocuotas %>" readonly class="tf_short" />
 </p>
