--- a/app/views/contratos/show.html.erb
+++ b/app/views/contratos/show.html.erb
@@ -68,6 +68,10 @@
   <strong>Comision2:</strong>
   <%= @contrato.comision2 %>
 </p>
+<p>
+  <strong>Comision3:</strong>
+  <%= @contrato.comision3 %>
+</p>
 
 <div class="row">
 
@@ -118,6 +122,7 @@
    <% t_vventa = 0    %>
    <% t_comision1 = 0    %>
    <% t_comision2 = 0    %>
+   
    <% t_total = 0    %>
    
    <%  @contrato_details.each do |quote| %>
