--- a/app/views/purchases/show.html.erb
+++ b/app/views/purchases/show.html.erb
@@ -28,6 +28,8 @@
 
 <p>
   <b>Code:</b>
+  <%= @purchase.document.description  %>
+  <br>
   <%= @purchase.documento %>
 </p>
 
@@ -47,7 +49,7 @@
   <%= link_to @supplier.name, @supplier %>
 </p>
 
-<%= render "suppliers/show" %>
+
 
 <%= hr() %>
 
