--- a/app/views/reports/reports_cpagar.html.erb
+++ b/app/views/reports/reports_cpagar.html.erb
@@ -14,7 +14,7 @@
   </h3>
   
   <p class="big">
-    <%= link_to "Facturas Emitidas ", "/companies/reports/rpt_cpagar1_all/#{@company.id}" %>
+    <%= link_to "Documentos de compras  ", "/companies/reports/rpt_cpagar1_all/#{@company.id}" %>
   </p>
   
   <p class="big">
