--- a/app/views/reports/rpt_cpagar1_all.html.erb
+++ b/app/views/reports/rpt_cpagar1_all.html.erb
@@ -30,7 +30,7 @@ totals = []
 		<input type="date" name="fecha2" value="2017-01-15" style = "width: 150px" >
   </div>
 
-  <input type="submit" value="To PDF"  />
+  <input type="submit" value="Generar Reporte"  />
   
 </form>
 
